--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>SB Photography</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/Users/SydTheKidd/Desktop/Portfolio/css/style.css">
+<link rel="stylesheet" type='text' href="index.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 .w3-bar-block .w3-bar-item {padding:20px}
